@@ -1,4 +1,5 @@
 require File.dirname(__FILE__) + '/spec_helper'
+require 'set'
 
 class SampleProblem < Gecode::Model
   attr :var
@@ -18,35 +19,59 @@ class SampleProblem < Gecode::Model
   end
 end
 
-describe Gecode::Model, ' (search)' do
+describe Gecode::Model, ' (with multiple solutions)' do
   before do
     @domain = 0..3
     @solved_domain = [2]
     @model = SampleProblem.new(@domain)
   end
 
-  it 'should produce a solution even if no constraints are specified' do
-    @model.solve!.should_not be_nil
+  it 'should pass a solution to the block given in #solution' do
+    @model.solution do |s|
+      s.var.should have_domain(@solved_domain)
+    end
   end
   
-  it 'should give nil if the problem can\'t be solved' do
-    @model.var.must < 1
-    @model.solve!.should be_nil
+  it 'should only evaluate the block for one solution in #solution' do
+    i = 0
+    @model.solution{ |s| i += 1 }
+    i.should equal(1)
   end
   
-  it 'should allow variables to be accessed from the solution' do
-    @model.solve!.var.should have_domain(@solved_domain)
+  it 'should return the result of the block when calling #solution' do
+    @model.solution{ |s| 'test' }.should == 'test'
+  end
+  
+  it 'should pass every solution to #each_solution' do
+    solutions = []
+    @model.each_solution do |s|
+      solutions << s.var.val
+    end
+    Set.new(solutions).should == Set.new([2,3])
+  end
+end
+
+describe Gecode::Model, ' (after #solve!)' do
+  before do
+    @domain = 0..3
+    @solved_domain = [2]
+    @model = SampleProblem.new(@domain)
+    @model.solve!
   end
 
-  it 'should update variables in arrays' do
-    @model.solve!.array.first.should have_domain(@solved_domain)
+  it 'should have updated the variables domains' do
+    @model.var.should have_domain(@solved_domain)
+  end
+
+  it 'should have updated variables in arrays' do
+    @model.array.first.should have_domain(@solved_domain)
   end
   
-  it 'should update variables in hashes' do
-    @model.solve!.hash.values.first.should have_domain(@solved_domain)
+  it 'should have updated variables in hashes' do
+    @model.hash.values.first.should have_domain(@solved_domain)
   end
   
-  it 'should update variables in nested enums' do
+  it 'should have updated variables in nested enums' do
     enum = @model.solve!.nested_enum
     enum[2].first.should have_domain(@solved_domain)
     enum[3][1][:b].should have_domain(@solved_domain)
@@ -57,15 +82,7 @@ describe Gecode::Model, ' (search)' do
   end
 end
 
-describe Gecode::Model, ' (after reset)' do
-  before do
-    @domain = 0..3
-    @reset_domain = 2..3
-    @model = SampleProblem.new(@domain)
-    @model.solve!
-    @model.reset!
-  end
-  
+describe 'reset model', :shared => true do
   it 'should have reset variables' do
     @model.var.should have_domain(@reset_domain)
   end
@@ -74,5 +91,67 @@ describe Gecode::Model, ' (after reset)' do
     enum = @model.nested_enum
     enum[2].first.should have_domain(@reset_domain)
     enum[3][1][:b].should have_domain(@reset_domain)
+  end
+end
+
+describe Gecode::Model, ' (after #reset!)' do
+  before do
+    @domain = 0..3
+    @reset_domain = 2..3
+    @model = SampleProblem.new(@domain)
+    @model.solve!
+    @model.reset!
+  end
+  
+  it_should_behave_like 'reset model'
+end
+
+describe Gecode::Model, ' (after #solution)' do
+  before do
+    @domain = 0..3
+    @reset_domain = 2..3
+    @model = SampleProblem.new(@domain)
+    @model.solution{ |s| }
+  end
+  
+  it_should_behave_like 'reset model'
+end
+
+describe Gecode::Model, ' (after #each_solution)' do
+  before do
+    @domain = 0..3
+    @reset_domain = 2..3
+    @model = SampleProblem.new(@domain)
+    @model.each_solution{ |s| }
+  end
+  
+  it_should_behave_like 'reset model'
+end
+
+describe Gecode::Model, ' (without solution)' do
+  before do
+    @domain = 0..3
+    @model = SampleProblem.new(@domain)
+    @model.var.must < 0
+  end
+  
+  it 'should return nil when calling #solution' do
+    @model.var.must < 0
+    @model.solution{ |s| 'test' }.should be_nil
+  end
+  
+  it 'should return nil when calling #solve!' do
+    @model.solve!.should be_nil
+  end
+end
+
+describe Gecode::Model, ' (without constraints)' do
+  before do
+    @model = Gecode::Model.new
+    @x = @model.int_var(0..1)
+  end
+  
+  it 'should produce a solution' do
+    @model.solve!.should_not be_nil
   end
 end
